<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.folkerse_subbook.EditItemActivity">

    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/nameEditText"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/commentEdit"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="96dp"
        android:ems="10"
        android:hint="@string/commentEditText"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/valueEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="96dp"
        android:ems="10"
        android:hint="@string/valueEditHint"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="325dp"
        android:layout_height="411dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="4dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="204dp"
        android:text="Date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonEditDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:text="@string/buttonEditDateText"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/dateView"
        app:layout_constraintStart_toEndOf="@+id/dateView"
        tools:text="@string/buttonEditDateText" />

    <Button
        android:id="@+id/buttonDateConfirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonDateConfirmText"
        android:textAllCaps="false"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/buttonDateConfirmText" />

    <TextView
        android:id="@+id/errorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginStart="36dp"
        app:layout_constraintBottom_toTopOf="@+id/commentEdit"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/buttonSaveText"
        android:textAllCaps="false"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEditDate"
        app:layout_constraintStart_toEndOf="@+id/buttonEditDate"
        tools:text="@string/buttonSaveText" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/buttonCancelText"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/buttonSave"
        app:layout_constraintTop_toBottomOf="@+id/buttonSave"
        tools:text="@string/buttonCancelText" />
</android.support.constraint.ConstraintLayout>
